@@ -1,3 +1,6 @@
+2006-03-13	Richard van den Berg  <richard@vdberg.org>
+	* Applied manual patch from Marc Haber
+
 2006-03-12	Richard van den Berg  <richard@vdberg.org>
 	* Mordernize use of AM_INIT_AUTOMAKE
 	* Use AIDEVERSION to avoid clash with VERSION of other packages
